--- a/create_dataset_forID.ipynb
+++ b/create_dataset_forID.ipynb
@@ -11894,6 +11894,134 @@
     "    with open(out_path+'train_list_G12_ID.txt', 'a') as f:\n",
     "        f.write(label+' '+out_path+label+'_'+j.split('/')[-1]+'\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# change the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_id_data(id):\n",
+    "    path = '/workspace/flearn_data/G%d_ID/train_list_G%d_ID.txt' % (id, id)\n",
+    "    with open(path, 'r') as f:\n",
+    "        lines = f.readlines()\n",
+    "\n",
+    "    speaker_dict = {}\n",
+    "\n",
+    "    for i in lines:\n",
+    "        if i.split(' ')[0] not in speaker_dict.keys():\n",
+    "            speaker_dict[i.split(' ')[0]] = [i.split(' ')[1].strip()]\n",
+    "        else:\n",
+    "            speaker_dict[i.split(' ')[0]].append(i.split(' ')[1].strip())\n",
+    "\n",
+    "    # pop the speaker with less than 40 utterances in speaker_dict\n",
+    "    for i in list(speaker_dict.keys()):\n",
+    "        if len(speaker_dict[i]) < 40:\n",
+    "            speaker_dict.pop(i)\n",
+    "\n",
+    "    # split the speaker utterances into 2 groups for each speaker in speaker_dict, and save into two files\n",
+    "    for i in speaker_dict.keys():\n",
+    "        with open('/workspace/flearn_data/IDtrain_list_G%d.txt'%id, 'a') as f:\n",
+    "            for j in speaker_dict[i][:20]:\n",
+    "                f.write(i+' '+j+'\\n')\n",
+    "        with open('/workspace/flearn_data/IDeval_list_G%d.txt'%id, 'a') as f:\n",
+    "            for j in speaker_dict[i][20:]:\n",
+    "                f.write(i+' '+j+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read the /workspace/flearn_data/G1_ID/train_list_G1_ID.txt\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "path = '/workspace/flearn_data/G7_ID/train_list_G7_ID.txt'\n",
+    "with open(path, 'r') as f:\n",
+    "    lines = f.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "speaker_dict = {}\n",
+    "\n",
+    "for i in lines:\n",
+    "    if i.split(' ')[0] not in speaker_dict.keys():\n",
+    "        speaker_dict[i.split(' ')[0]] = [i.split(' ')[1].strip()]\n",
+    "    else:\n",
+    "        speaker_dict[i.split(' ')[0]].append(i.split(' ')[1].strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lens = []\n",
+    "for i in speaker_dict.keys():\n",
+    "    lens.append(len(speaker_dict[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pop the speaker with less than 40 utterances in speaker_dict\n",
+    "for i in list(speaker_dict.keys()):\n",
+    "    if len(speaker_dict[i]) < 40:\n",
+    "        speaker_dict.pop(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split the speaker utterances into 2 groups for each speaker in speaker_dict, and save into two files\n",
+    "for i in speaker_dict.keys():\n",
+    "    with open('/workspace/flearn_data/IDtrain_list_G7.txt', 'a') as f:\n",
+    "        for j in speaker_dict[i][:20]:\n",
+    "            f.write(i+' '+j+'\\n')\n",
+    "    with open('/workspace/flearn_data/IDeval_list_G7.txt', 'a') as f:\n",
+    "        for j in speaker_dict[i][20:]:\n",
+    "            f.write(i+' '+j+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(12):\n",
+    "    generate_id_data(i+1)"
+   ]
   }
  ],
  "metadata": {
