--- a/evaluate_tsne.ipynb
+++ b/evaluate_tsne.ipynb
@@ -543,11 +543,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## others"
+   ]
   },
   {
    "cell_type": "code",
