--- a/eval_id1.ipynb
+++ b/eval_id1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -26,10 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
+    "\n",
     "def loadParameters(model, path, map_location=\"cuda:0\"):\n",
     "\n",
     "    self_state = model.state_dict()\n",
@@ -53,12 +55,12 @@
     "                origname, self_state[name].size(), loaded_state['model'][origname].size()))\n",
     "            continue\n",
     "\n",
-    "        self_state[name].copy_(param)\n"
+    "        self_state[name].copy_(param)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,22 +123,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%\n",
-    "# load the pytorch model\n",
+    "def generate_dictkeys(input_file):\n",
+    "    ### Read Training Files...\n",
+    "    with open(input_file) as dataset_file:\n",
+    "        lines = dataset_file.readlines()\n",
     "\n",
-    "import torch\n",
+    "    dictkeys = list(set([x.split()[0] for x in lines]))\n",
+    "    dictkeys.sort()\n",
+    "    dictkeys = { key : ii for ii, key in enumerate(dictkeys) }\n",
+    "    # len_dictkeys_ori = len(dictkeys)\n",
     "\n",
-    "loaded_state = torch.load(\n",
-    "    datadir + '/STD: std_FL test compact testing, canoical.pth', map_location='cpu')\n"
+    "    label_dict = {}\n",
+    "    data_list  = []\n",
+    "    data_label = []\n",
+    "\n",
+    "    lidx = 0\n",
+    "    for _, line in enumerate(lines):\n",
+    "        data = line.strip().split()\n",
+    "\n",
+    "        speaker_label = dictkeys[data[0]]\n",
+    "        filename = os.path.join('', data[1])\n",
+    "\n",
+    "        if not (speaker_label in label_dict):\n",
+    "            label_dict[speaker_label] = []\n",
+    "\n",
+    "        label_dict[speaker_label].append(lidx)\n",
+    "        \n",
+    "        data_label.append(speaker_label)\n",
+    "        data_list.append(filename)\n",
+    "\n",
+    "        lidx += 1\n",
+    "\n",
+    "    return dictkeys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictkeys = generate_dictkeys('/workspace/flearn_data/IDtrain_list_G1.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.DatasetLoader import get_data_loader_speaker\n",
+    "\n",
+    "dataloader = get_data_loader_speaker(0, dataset_file_name='/workspace/flearn_data/IDtrain_list_G1.txt', \n",
+    "        batch_size=128, augment=False, musan_path='/nvme/zhiyong/musan_split', \n",
+    "        rir_path='/nvme/zhiyong/RIRS_NOISES/simulated_rirs', max_frames=300, \n",
+    "        max_seg_per_spk=100, nDataLoaderThread=8, nPerSpeaker=1, \n",
+    "        train_path='', sox_aug=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -154,12 +205,12 @@
     "from src.SpeakerNet import SpeakerNet\n",
     "\n",
     "model = SpeakerNet(model='X_vector', trainfunc='softmax', nPerSpeaker=1, Syncbatch=False,\n",
-    "                   n_mels=40, nOut=192, spec_aug=False, nClasses=5994, additional_model=[True, False], ID_task=40)\n"
+    "                   n_mels=40, nOut=192, spec_aug=False, nClasses=5994, additional_model=[True, False], ID_task=len(dictkeys))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,57 +221,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[-0.6140, -1.7953, -0.7002],\n",
-      "        [-0.4306,  0.6658, -0.3207]])\n",
-      "tensor([[0.4496, 0.1380, 0.4125],\n",
-      "        [0.1957, 0.5858, 0.2184]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# pytorch softmax function demo\n",
-    "\n",
-    "import torch.nn.functional as F\n",
-    "import torch\n",
-    "\n",
-    "\n",
-    "x = torch.randn(2, 3)\n",
-    "print(x)\n",
-    "print(F.softmax(x, dim=1))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 1.0797, -1.3248, -0.8251,  0.4565,  1.3985],\n",
-       "        [-0.3997,  0.0221,  0.1411,  0.1974,  0.0455]],\n",
-       "       grad_fn=<AddmmBackward0>)"
+       "['__S__.torchfb.0.flipped_filter',\n",
+       " '__S__.torchfb.1.spectrogram.window',\n",
+       " '__S__.torchfb.1.mel_scale.fb',\n",
+       " '__S__.tdnn1.0.weight',\n",
+       " '__S__.tdnn1.0.bias',\n",
+       " '__S__.tdnn1.2.weight',\n",
+       " '__S__.tdnn1.2.bias',\n",
+       " '__S__.tdnn1.2.running_mean',\n",
+       " '__S__.tdnn1.2.running_var',\n",
+       " '__S__.tdnn1.2.num_batches_tracked',\n",
+       " '__S__.tdnn2.0.weight',\n",
+       " '__S__.tdnn2.0.bias',\n",
+       " '__S__.tdnn2.2.weight',\n",
+       " '__S__.tdnn2.2.bias',\n",
+       " '__S__.tdnn2.2.running_mean',\n",
+       " '__S__.tdnn2.2.running_var',\n",
+       " '__S__.tdnn2.2.num_batches_tracked',\n",
+       " '__S__.tdnn3.0.weight',\n",
+       " '__S__.tdnn3.0.bias',\n",
+       " '__S__.tdnn3.2.weight',\n",
+       " '__S__.tdnn3.2.bias',\n",
+       " '__S__.tdnn3.2.running_mean',\n",
+       " '__S__.tdnn3.2.running_var',\n",
+       " '__S__.tdnn3.2.num_batches_tracked',\n",
+       " '__S__.tdnn4.0.weight',\n",
+       " '__S__.tdnn4.0.bias',\n",
+       " '__S__.tdnn4.2.weight',\n",
+       " '__S__.tdnn4.2.bias',\n",
+       " '__S__.tdnn4.2.running_mean',\n",
+       " '__S__.tdnn4.2.running_var',\n",
+       " '__S__.tdnn4.2.num_batches_tracked',\n",
+       " '__S__.tdnn5.0.weight',\n",
+       " '__S__.tdnn5.0.bias',\n",
+       " '__S__.tdnn5.2.weight',\n",
+       " '__S__.tdnn5.2.bias',\n",
+       " '__S__.tdnn5.2.running_mean',\n",
+       " '__S__.tdnn5.2.running_var',\n",
+       " '__S__.tdnn5.2.num_batches_tracked',\n",
+       " '__S__.pooling.linear1.weight',\n",
+       " '__S__.pooling.linear1.bias',\n",
+       " '__S__.pooling.linear2.weight',\n",
+       " '__S__.pooling.linear2.bias',\n",
+       " '__S__.embedding_layer1.linear.weight',\n",
+       " '__S__.embedding_layer1.linear.bias',\n",
+       " '__S__.embedding_layer1.batchnorm.weight',\n",
+       " '__S__.embedding_layer1.batchnorm.bias',\n",
+       " '__S__.embedding_layer1.batchnorm.running_mean',\n",
+       " '__S__.embedding_layer1.batchnorm.running_var',\n",
+       " '__S__.embedding_layer1.batchnorm.num_batches_tracked',\n",
+       " '__L__.fc.weight',\n",
+       " '__L__.fc.bias',\n",
+       " '__L__.encoder_layers.self_attn.in_proj_weight',\n",
+       " '__L__.encoder_layers.self_attn.in_proj_bias',\n",
+       " '__L__.encoder_layers.self_attn.out_proj.weight',\n",
+       " '__L__.encoder_layers.self_attn.out_proj.bias',\n",
+       " '__L__.encoder_layers.linear1.weight',\n",
+       " '__L__.encoder_layers.linear1.bias',\n",
+       " '__L__.encoder_layers.linear2.weight',\n",
+       " '__L__.encoder_layers.linear2.bias',\n",
+       " '__L__.encoder_layers.norm1.weight',\n",
+       " '__L__.encoder_layers.norm1.bias',\n",
+       " '__L__.encoder_layers.norm2.weight',\n",
+       " '__L__.encoder_layers.norm2.bias',\n",
+       " '__L__.transformer_encoder.layers.0.self_attn.in_proj_weight',\n",
+       " '__L__.transformer_encoder.layers.0.self_attn.in_proj_bias',\n",
+       " '__L__.transformer_encoder.layers.0.self_attn.out_proj.weight',\n",
+       " '__L__.transformer_encoder.layers.0.self_attn.out_proj.bias',\n",
+       " '__L__.transformer_encoder.layers.0.linear1.weight',\n",
+       " '__L__.transformer_encoder.layers.0.linear1.bias',\n",
+       " '__L__.transformer_encoder.layers.0.linear2.weight',\n",
+       " '__L__.transformer_encoder.layers.0.linear2.bias',\n",
+       " '__L__.transformer_encoder.layers.0.norm1.weight',\n",
+       " '__L__.transformer_encoder.layers.0.norm1.bias',\n",
+       " '__L__.transformer_encoder.layers.0.norm2.weight',\n",
+       " '__L__.transformer_encoder.layers.0.norm2.bias',\n",
+       " '__L__.transformer_encoder.layers.1.self_attn.in_proj_weight',\n",
+       " '__L__.transformer_encoder.layers.1.self_attn.in_proj_bias',\n",
+       " '__L__.transformer_encoder.layers.1.self_attn.out_proj.weight',\n",
+       " '__L__.transformer_encoder.layers.1.self_attn.out_proj.bias',\n",
+       " '__L__.transformer_encoder.layers.1.linear1.weight',\n",
+       " '__L__.transformer_encoder.layers.1.linear1.bias',\n",
+       " '__L__.transformer_encoder.layers.1.linear2.weight',\n",
+       " '__L__.transformer_encoder.layers.1.linear2.bias',\n",
+       " '__L__.transformer_encoder.layers.1.norm1.weight',\n",
+       " '__L__.transformer_encoder.layers.1.norm1.bias',\n",
+       " '__L__.transformer_encoder.layers.1.norm2.weight',\n",
+       " '__L__.transformer_encoder.layers.1.norm2.bias',\n",
+       " '_SpeakerNet__L__ID.fc.weight',\n",
+       " '_SpeakerNet__L__ID.fc.bias']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import torch.nn as nn\n",
-    "\n",
-    "fc = nn.Linear(3, 5)\n",
-    "\n",
-    "fc(x)\n"
+    "list(model.state_dict().keys())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
