--- a/test.ipynb
+++ b/test.ipynb
@@ -2777,7 +2777,7 @@
     {
      "data": {
       "text/html": [
-       " View run <strong style=\"color:#cdcd00\">different-moon-31</strong> at: <a href='https://wandb.ai/greatml/FedSPK/runs/7hht8c8a' target=\"_blank\">https://wandb.ai/greatml/FedSPK/runs/7hht8c8a</a><br/>Synced 5 W&B file(s), 0 media file(s), 1 artifact file(s) and 0 other file(s)"
+       " View run <strong style=\"color:#cdcd00\">different-moon-31</strong> at: <a href='https://.ai/greatml/FedSPK/runs/7hht8c8a' target=\"_blank\">https://.ai/greatml/FedSPK/runs/7hht8c8a</a><br/>Synced 5 W&B file(s), 0 media file(s), 1 artifact file(s) and 0 other file(s)"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2789,7 +2789,7 @@
     {
      "data": {
       "text/html": [
-       "Find logs at: <code>./wandb/run-20230308_040026-7hht8c8a/logs</code>"
+       "Find logs at: <code>.//run-20230308_040026-7hht8c8a/logs</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2818,7 +2818,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.01666894193428258, max=1.0)…"
+       "VBox(children=(Label(value='Waiting for .init()...\\r'), FloatProgress(value=0.01666894193428258, max=1.0)…"
       ]
      },
      "metadata": {},
@@ -2827,8 +2827,8 @@
     {
      "data": {
       "text/html": [
-       "wandb version 0.13.11 is available!  To upgrade, please run:\n",
-       " $ pip install wandb --upgrade"
+       " version 0.13.11 is available!  To upgrade, please run:\n",
+       " $ pip install  --upgrade"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2840,7 +2840,7 @@
     {
      "data": {
       "text/html": [
-       "Tracking run with wandb version 0.13.10"
+       "Tracking run with  version 0.13.10"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2852,7 +2852,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/workspace/FedSPK/wandb/run-20230308_040556-xnfikb8h</code>"
+       "Run data is saved locally in <code>/workspace/FedSPK//run-20230308_040556-xnfikb8h</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2864,7 +2864,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/greatml/FedSPK/runs/xnfikb8h' target=\"_blank\">floral-donkey-32</a></strong> to <a href='https://wandb.ai/greatml/FedSPK' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://.ai/greatml/FedSPK/runs/xnfikb8h' target=\"_blank\">floral-donkey-32</a></strong> to <a href='https://.ai/greatml/FedSPK' target=\"_blank\">Weights & Biases</a> (<a href='https://.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2876,7 +2876,7 @@
     {
      "data": {
       "text/html": [
-       " View project at <a href='https://wandb.ai/greatml/FedSPK' target=\"_blank\">https://wandb.ai/greatml/FedSPK</a>"
+       " View project at <a href='https://.ai/greatml/FedSPK' target=\"_blank\">https://.ai/greatml/FedSPK</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2888,7 +2888,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/greatml/FedSPK/runs/xnfikb8h' target=\"_blank\">https://wandb.ai/greatml/FedSPK/runs/xnfikb8h</a>"
+       " View run at <a href='https://.ai/greatml/FedSPK/runs/xnfikb8h' target=\"_blank\">https://.ai/greatml/FedSPK/runs/xnfikb8h</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2900,7 +2900,7 @@
     {
      "data": {
       "text/plain": [
-       "<wandb.sdk.wandb_artifacts.Artifact at 0x7f8eefacbbb0>"
+       "<.sdk._artifacts.Artifact at 0x7f8eefacbbb0>"
       ]
      },
      "execution_count": 5,
@@ -2909,15 +2909,15 @@
     }
    ],
    "source": [
-    "import wandb\n",
+    "import \n",
     "import random\n",
     "\n",
     "# create a random artifact\n",
-    "artifact = wandb.Artifact(name=\"Artifact\"+str(random.random()), type='model', description=\"STD: centerized training\")\n",
+    "artifact = .Artifact(name=\"Artifact\"+str(random.random()), type='model', description=\"STD: centerized training\")\n",
     "artifact.add_file(local_path=\"/workspace/FL_log/2023-03-07_16:57:51/STD: centerized training.pth\")\n",
     "\n",
     "# Create a W&B Run. Replace 'job-type'.\n",
-    "run = wandb.init(project=\"FedSPK\", job_type='upload-artifacts')\n",
+    "run = .init(project=\"FedSPK\", job_type='upload-artifacts')\n",
     "\n",
     "run.log_artifact(artifact)"
    ]
