--- a/eval_id1 copy.ipynb
+++ b/eval_id1 copy.ipynb
@@ -903,15 +903,69 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# use wandb artifact outside a run\n",
+    "# %%\n",
+    "import time\n",
+    "from src.DatasetLoader import loadWAV\n",
+    "import os\n",
+    "import sys\n",
     "\n",
-    "import wandb\n",
     "\n",
-    "api = wandb.Api()\n",
-    "artifact = api.artifact('greatml/FedSPK/Artifact0.8790510733321198:v0')\n",
+    "def evaluateFromList(model, listfilename, print_interval=100, test_path='', num_eval=10, eval_frames=0, verbose=True):\n",
     "\n",
-    "datadir = artifact.download()"
+    "    model = model.cuda()\n",
+    "\n",
+    "    model.eval()\n",
+    "\n",
+    "    labels = []\n",
+    "    files = []\n",
+    "    feats = []\n",
+    "    tstart = time.time()\n",
+    "\n",
+    "    # Read all lines\n",
+    "    with open(listfilename) as listfile:\n",
+    "        while True:\n",
+    "            line = listfile.readline()\n",
+    "            if (not line):\n",
+    "                break\n",
+    "\n",
+    "            data = line.split()\n",
+    "\n",
+    "            files.append(data[1])\n",
+    "            labels.append(data[0])\n",
+    "\n",
+    "    f_labels = []\n",
+    "    # Save all features to file\n",
+    "    for idx, (file, label) in enumerate(zip(files, labels)):\n",
+    "\n",
+    "        inp1 = torch.FloatTensor(loadWAV(os.path.join(\n",
+    "            test_path, file), eval_frames, evalmode=True, num_eval=num_eval)).cuda()\n",
+    "\n",
+    "        try:\n",
+    "            ref_feat = model.forward(inp1).detach().cpu()\n",
+    "        except:\n",
+    "            print(\"Error in file: \", file)\n",
+    "            continue\n",
+    "\n",
+    "        feats.append(ref_feat)\n",
+    "        f_labels.append(label)\n",
+    "\n",
+    "        telapsed = time.time() - tstart\n",
+    "\n",
+    "        if (idx % print_interval == 0) and verbose:\n",
+    "            sys.stdout.write(\"\\rReading %d of %d: %.2f Hz, embedding size %d\" % (\n",
+    "                idx, len(files), idx/telapsed, ref_feat.size()[1]))\n",
+    "\n",
+    "    tstart = time.time()\n",
+    "\n",
+    "    return feats, f_labels\n"
    ]
   },
   {
@@ -925,7 +979,7 @@
     "import wandb\n",
     "\n",
     "api = wandb.Api()\n",
-    "artifact = api.artifact('greatml/FedSPK/Artifact0.8790510733321198:v0')\n",
+    "artifact = api.artifact('greatml/FedSPK/ID_model12:v0')\n",
     "\n",
     "datadir = artifact.download()"
    ]
