--- a/process_wandbplot.ipynb
+++ b/process_wandbplot.ipynb
@@ -1942,6 +1942,21 @@
     "# Show the plot\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make continous learning plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
